<resources>
    <string name="app_name">Hungry Dog</string>
    <string name="new_game">New game</string>
    <string name="continue_game">Continue</string>
    <string name="score">"Bones: "</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="sound_in_game">Sound</string>
    <string name="life">"Life: "</string>
    <string name="level_num">"Level "</string>
    <string name="time">"Time: "</string>
    <string name="level_1">"Level 1"</string>
    <string name="level_2">"Level 2"</string>
    <string name="level_3">"Level 3"</string>
    <string name="level_4">"Level 4"</string>
    <string name="level_5">"Level 5"</string>
    <string name="level_6">"Level 6"</string>
    <string name="level_7">"Level 7"</string>
    <string name="level_8">"Level 8"</string>
    <string name="level_9">"Level 9"</string>
    <string name="level_10">"Level 10"</string>
    <string name="result_lose">"Game Over. You lose"</string>
    <string name="result_win">"You won. Congratulations"</string>
    <string name="rules">Rules:\ncollect bones and hearts, turn away from the bear and the vacuum cleaner</string>
    <string name="records">Records</string>
    <string name="secs">secs</string>
    <string name="record">"Record: "</string>
    <string name="new_record">"A new record has been set"</string>
</resources>